--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,16 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+#----------------#
+# Custom ignores #
+_build
+
+src/c_sharp/.vs
+src/c_sharp/.idea
+
+src/c_sharp/PostInstallationRunner/bin
+src/c_sharp/PostInstallationRunner/obj
+src/c_sharp/PostInstallationRunner/Properties/PublishProfiles/*.user
+src/c_sharp/PostInstallationRunner/*.user
